869 content indexing fresh (#418)
* Fix content indexing issue #869